# libdhcom_hal

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DHCOM_HAL.pro  DHCOM_HAL_GenConfig.cmake  DHCOM_HAL_Packaging.cmake  DHCOM_HAL_Utils.cmake  Doxyfile  Makefile.DHCOM  README.md  arm-linux-gnueabi-toolchain.CMakeCross.txt  arm-linux-gnueabihf-toolchain.CMakeCross.txt  arm-linux-linaro-4.9-gnueabihf-toolchain.CMakeCross.txt  changelog  libdhcom-hal.pc.cmakein
DEBIAN_PACKAGE/: changelog  preinst
DEBIAN_PACKAGE/DEBIAN/: changelog  control  postinst
include/: DHCOM_HAL.h
include/deprecated/: pwm.h  touch.h  usb_fs.h
include/hal/: ADC.h  GPIO.h  I2CBus.h  I2CSlave.h  PhysMem.h  SPI.h  System.h  Types.h  UART.h
src/: I2CSlave.cpp
src/Linux/: ADC.cpp  GPIO.cpp  HardwareProps_AM33.hpp  HardwareProps_AM35.hpp  HardwareProps_IMX25.hpp  HardwareProps_IMX6.hpp  HardwareProps_IMX6ULL.hpp  HardwareProps_PC.hpp  HardwareProps_STM32MP1.hpp  I2CBus.cpp  PhysMem.cpp  SPI.cpp  System.cpp  UART.cpp  imx_adc.h
src/Win32/: HardwareProps_PC.hpp  System.cpp  UART.cpp
tests/: CMakeLists.txt  COPYING.BSD-3  main.cpp  test.h
